fix: ui layout fix on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -74,13 +74,13 @@ body {
 
 h1 {
   @apply text-3xl sm:text-4xl lg:text-5xl font-poppins;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1.3;
 }
 
 h2 {
   @apply text-2xl sm:text-3xl lg:text-4xl font-poppins;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 h3 {
@@ -139,18 +139,18 @@ p {
 
 @layer components {
   .hero {
-    @apply flex flex-col lg:flex-row items-center justify-between gap-8 lg:gap-12 px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20;
+    @apply flex flex-col lg:flex-row items-center justify-between gap-8 lg:gap-12 px-4 sm:px-6 lg:px-8 py-10 sm:py-16 lg:py-20;
   }
 
   .features {
-    @apply flex flex-col lg:gap-8 px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-30;
+    @apply flex flex-col gap-6 lg:gap-12 px-4 sm:px-6 lg:px-8 py-8 sm:py-16 lg:py-20;
   }
 
   .guide {
-    @apply flex flex-col  lg:gap-8 px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20;
+    @apply flex flex-col gap-6 lg:gap-12 px-4 sm:px-6 lg:px-8 py-8 sm:py-16 lg:py-20;
   }
 
   .teamwork {
-    @apply relative flex flex-col lg:flex-col lg:gap-8 px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20;
+    @apply relative flex flex-col gap-6 lg:flex-col lg:gap-12 px-4 py-8 sm:px-6 sm:py-16 lg:px-8 lg:py-20;
   }
 }
